---------------------------------------------------------------------------------------------------
Version: 1.5.2
  Tweaks:
   - Increased auto resolution to scale to 200 hrs with additional processingPerTick
  Bugfixes:
   - Fixed evolution was not being properly clamped between [0,1)

---------------------------------------------------------------------------------------------------
Version: 1.5.1
  Bugfixes:
    - Fixed /rampantEvolution display order

---------------------------------------------------------------------------------------------------
Version: 1.5.0
  Improvements:
    - Added evolution cap based on research
    - Added evolution per player structure killed for low, medium, and high value entities
  Tweaks:
    - Reduced spawner kills default mod setting for evolution contribution to 300
    - Switched pause vanilla evolution factor mod setting to be enabled by default
  Bugfixes:
    - Fixed spawner faction units being counted as unit spawner kills (Thanks drayath)
    - Fixed tooltip on gui shortcut toggle
    - Fixed evolution gui not refreshing immediately after changing mod settings

---------------------------------------------------------------------------------------------------
Version: 1.4.2
  Bugfixes:
    - Fixed gui could become orphaned on upgrade
    - Fixed invalid key to next due to player leaving game, removed player index conditional

---------------------------------------------------------------------------------------------------
Version: 1.4.1
  Bugfixes:
    - Fixed 60 minute evolution change counter
    - Fixed invalid key to next due to player leaving game

---------------------------------------------------------------------------------------------------
Version: 1.4.0
Date: 20. 03. 2022
  Improvements:
    - Added GUI shortcut with mod setting toggle
    - Added 5, 30, 60 minute changes in evolution to displayed stats
  Tweaks:
    - Switched license to GPLv3
